* TODO
- Rename stack worker commands config option to something more generic
- Use memo instead of static array for stack bombard
- Fix pop unit AI not working on terraform strategy

* RELEASE 8
- Stack fortify, upgrade, and disband
- Pop unit AI
- Group units on right click menu
- Stack worker commands apply across unit types

* RELEASE 7
- Buttons on trade screen to quickly switch between civs
- Ask/offer gold popup autofills best amount
- Adjustable minimum city distance

* RELEASE 6
- Add option to increase AI artillery and bomber production
- Allow AI to grab artillery escorts from city defenders so its arty can be used in the field
- Improve leader unit AI: fix bug allowing rush of any city build, prefer forming armies, select better rush targets
- Improve AI army inclusion criteria: exclude HN & defensive units, fix movement check
- Fix for immobile unit disembark crash
- Fix for for houseboat bug
- Set LAA bit when creating modded EXE

* RELEASE 5
- Stack worker commands
- Skip repeated popups asking to replace a tile improvement
- Enable free improvements from small wonders
- Disorder warning recomputes city happiness before running its check
- Stack bombard won't interrupt interception or auto bombard missions
- Mod loads its labels from a file, for translatability
- Renamed script.txt to avoid confusion with base game files

* RELEASE 4B
- Fix city prod info confusing units with Wealth

* RELEASE 4
- Detailed city production info
- Option to limit railroad movement
- Removed unit limit
- Altered scripts so they work when run as administrator.
- Bypassed era number check (not yet a real implementation of no era limit)
- Warning message instead of crash if config file is not found

* RELEASE 3
- Ability to install mod into the Civ executable
- Ability to dynamically change mod settings based on text config file
- Disorder warning
- Fix for 'pedia pink line bug
- Stealth attack activates even when there's only one target

* RELEASE 2