@@ -16,6 +16,11 @@ disallow_founding_next_to_foreign_city = true
 enable_trade_screen_scroll = true
 group_units_on_right_click_menu = true
 
+; Set to a number >0 and <=100 to reduce anarchy time by that amount as a percentage. For example, if set to 50, anarchy length is reduced by half,
+; so a 7 turn anarchy becomes 3 or 4 turns. There is a minimum anarchy length of 2 turns regardless of the reduction, but you can remove anarchy
+; entirely by setting the reduction >100.
+anarchy_length_reduction_percent = 0
+
 [== AI ENHANCEMENT ==]
 ; Allows artillery unit AI to grab escorts from city defenders, causing the AI to use its artillery offensively instead of leaving it in its cities.
 use_offensive_artillery_ai = true
